--- a/src/main/resources/templates/basic/addForm.html
+++ b/src/main/resources/templates/basic/addForm.html
@@ -17,35 +17,31 @@
 <div class="container">
 
     <div class="py-5 text-center">
-        <h2>상품 등록 폼</h2>
+        <h2>글쓰기</h2>
     </div>
 
-    <h4 class="mb-3">상품 입력</h4>
+    <h4 class="mb-3">글 입력</h4>
 
-    <form action="writing.html" th:action method="post">
+    <form action="writing.html" th:action="@{/writings/add}" method="post">
         <div>
-            <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요">
+            <label for="writingTitle">글제목</label>
+            <input type="text" id="writingTitle" name="title" class="form-control" placeholder="제목을 입력하세요">
         </div>
         <div>
-            <label for="price">가격</label>
-            <input type="text" id="price" name="price" class="form-control" placeholder="가격을 입력하세요">
-        </div>
-        <div>
-            <label for="quantity">수량</label>
-            <input type="text" id="quantity" name="quantity" class="form-control" placeholder="수량을 입력하세요">
+            <label for="writingContext">내용</label>
+            <textarea type="text" id="writingContext" name="context" class="form-control" placeholder="글 내용을 입력하세요"></textarea>
         </div>
 
         <hr class="my-4">
 
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등록</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">글 등록</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/basic/items}'|"
+                        onclick="location.href='main.html'"
+                        th:onclick="|location.href='@{/main}'|"
                         type="button">취소</button>
             </div>
         </div>
