--- a/src/main/resources/templates/basic/writing.html
+++ b/src/main/resources/templates/basic/writing.html
@@ -31,7 +31,6 @@
         <text type="textarea" class="form-control"  th:text="${writing.context}" readonly></text>
     </div>
 
-
     <hr class="my-4">
 
     <div class="row">
@@ -44,7 +43,7 @@
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='main.html'"
-                    th:onclick="|location.href='@{/basic/main}'|"
+                    th:onclick="|location.href='@{/writings}'|"
                     type="button">목록으로</button>
         </div>
 
