글 등록시 확인 메시지 추가

--- a/src/main/resources/templates/basic/writing.html
+++ b/src/main/resources/templates/basic/writing.html
@@ -18,8 +18,8 @@
     <div class="py-5 text-center">
         <h2>글 상세</h2>
     </div>
-    <!-- -->
-<!--    <h2 th:if="${param.status}" th:text="'상품등록이 완료되었습니다.'"></h2>-->
+
+    <h2 th:if="${param.status}" th:text="'글 등록이 완료되었습니다.'"></h2>
 
     <div>
         제목:<h1 th:text="${writing.title}"></h1>
