--- a/src/main/resources/templates/basic/loginForm.html
+++ b/src/main/resources/templates/basic/loginForm.html
@@ -14,6 +14,10 @@
             border-color:#dc3545;
             color:#dc3545;
         }
+        .global-error{
+            background-color:black;
+            font-weight:bold;
+        }
     </style>
     <th:block th:if="${param.status}">
         <script>
@@ -29,10 +33,14 @@
         <h2>로그인</h2>
     </div>
 
+
     <form action="loginForm.html"
           th:action="@{/login}"
           th:object="${loginUserForm}"
           method="post">
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error global-error" th:each="err:${#fields.globalErrors()}" th:text="${err}"></p>
+        </div>
         <div>
             <label for="loginId">아이디</label>
             <input type="text" id="loginId"
