인터셉터 redirect버그 수정(html th:action에 주의하기)

--- a/src/main/resources/templates/basic/loginForm.html
+++ b/src/main/resources/templates/basic/loginForm.html
@@ -35,7 +35,7 @@
 
 
     <form action="loginForm.html"
-          th:action="@{/login}"
+          th:action
           th:object="${loginUserForm}"
           method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
