--- a/src/main/resources/templates/basic/main.html
+++ b/src/main/resources/templates/basic/main.html
@@ -24,13 +24,13 @@
         </div>
         <div class="col">
             <button class="btn btn-primary float-end"
-                    th:onclick="|location.href='@{/logout}'|"
+                    th:onclick="|location.href='@{/userinfo}'|"
                     onclick="location.href='main.html'"
                     type="button">회원상세정보</button>
         </div>
         <div class="col">
             <button class="btn btn-primary float-end"
-                    th:onclick="|location.href='@{/logout}'|"
+                    th:onclick="|location.href='@{/userinfo/edit}'|"
                     onclick="location.href='main.html'"
                     type="button">회원정보수정</button>
         </div>
