--- a/src/main/resources/templates/basic/userInfo.html
+++ b/src/main/resources/templates/basic/userInfo.html
@@ -28,9 +28,25 @@
         <text type="textarea" class="form-control"  th:text="${user.username}" readonly></text>
     </div>
     <div>
+        <label>아이디</label>
+        <text type="textarea" class="form-control"  th:text="${user.loginId}" readonly></text>
+    </div>
+    <div>
         <label>이메일</label>
         <text type="textarea" class="form-control"  th:text="${user.email}" readonly></text>
     </div>
+    <hr class="my-4">
+    <div id="map" style="width:500px;height:400px;"></div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e890d377680f8bd3ffa9d0a49a4a05b0"></script>
+    <script>
+        var container = document.getElementById('map');
+        var options = {
+            center: new kakao.maps.LatLng(33.450701, 126.570667),
+            level: 3
+        };
+
+        var map = new kakao.maps.Map(container, options);
+    </script>
 
     <hr class="my-4">
 
