회원정보 아이디 바꾸기 버그 수정

--- a/src/main/resources/templates/basic/loginForm.html
+++ b/src/main/resources/templates/basic/loginForm.html
@@ -32,8 +32,8 @@
     <div class="py-5 text-center">
         <h2>로그인</h2>
     </div>
-    <h3 th:if="${status}" th:text="'회원가입에 성공하셨습니다. 로그인 해주세요.'"></h3>
-    <h3 th:if="${changedId}" th:text="'변경된 아이디로 로그인해주세요.'"></h3>
+<!--    <h3 th:if="${status}" th:text="'회원가입에 성공하셨습니다. 로그인 해주세요.'"></h3>-->
+<!--    <h3 th:if="${changedId}" th:text="'변경된 아이디로 로그인해주세요.'"></h3>-->
 
     <form action="loginForm.html"
           th:action
