--- a/src/main/resources/templates/error/4XX.html
+++ b/src/main/resources/templates/error/4XX.html
@@ -10,6 +10,7 @@
   </div>
   <div>
     <p>오류 화면 입니다. 요청 URL을 확인해주세요.</p>
+    <h2><a href="localhost:8080">홈으로 돌아가기</a></h2>
   </div>
   <hr class="my-4">
 </div> <!-- /container -->
