--- a/src/main/resources/templates/error/5XX.html
+++ b/src/main/resources/templates/error/5XX.html
@@ -10,6 +10,7 @@
   </div>
   <div>
     <p>서버 내부에 오류가 있습니다. 다시 접속 부탁드립니다.</p>
+    <h2><a href="localhost:8080">홈으로 돌아가기</a></h2>
   </div>
   <hr class="my-4">
 </div> <!-- /container -->
