--- a/src/main/resources/templates/basic/writing.html
+++ b/src/main/resources/templates/basic/writing.html
@@ -26,7 +26,7 @@
     </div>
     <br>
     <div>
-        작성자:<h2 th:text="${writing.user.username}"></h2>
+        작성자:<h2 th:text="${writing.member.username}"></h2>
     </div>
     <br>
     <div>
