--- a/src/main/resources/templates/basic/memberInfo.html
+++ b/src/main/resources/templates/basic/memberInfo.html
@@ -25,15 +25,15 @@
     <br>
     <div>
         <label>이름</label>
-        <text type="textarea" class="form-control"  th:text="${user.username}" readonly></text>
+        <text type="textarea" class="form-control"  th:text="${member.username}" readonly></text>
     </div>
     <div>
         <label>아이디</label>
-        <text type="textarea" class="form-control"  th:text="${user.loginId}" readonly></text>
+        <text type="textarea" class="form-control"  th:text="${member.loginId}" readonly></text>
     </div>
     <div>
         <label>이메일</label>
-        <text type="textarea" class="form-control"  th:text="${user.email}" readonly></text>
+        <text type="textarea" class="form-control"  th:text="${member.email}" readonly></text>
     </div>
     <hr class="my-4">
     <div id="map" style="width:500px;height:400px;"></div>
