--- a/src/main/resources/templates/basic/writing.html
+++ b/src/main/resources/templates/basic/writing.html
@@ -26,7 +26,7 @@
     </div>
     <br>
     <div>
-        작성자:<h2 th:text="${writing.member.username}"></h2>
+        작성자:<h2 th:text="${writing.member.name}"></h2>
     </div>
     <br>
     <div>
@@ -34,8 +34,9 @@
         <text type="textarea" class="form-control"  th:text="${writing.content}" readonly></text>
     </div>
     <br>
-    <img th:each="imageFile : ${writing.imageFiles}" th:src="|/images/${imageFile.getStoreFilename()}|"
+    <img th:each="attachedFile : ${writing.attachedFiles}" th:src="|/images/${attachedFile.getStoreFilename()}|"
          width="500" height="500"/>
+
 
     <hr class="my-4">
 
@@ -44,20 +45,23 @@
             <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='editForm.html'"
                     th:onclick="|location.href='@{/edit/{writingId}/(writingId=${writing.id})}'|"
-                    type="button">글 수정</button>
+                    type="button">글 수정
+            </button>
         </div>
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='main.html'"
                     th:onclick="|location.href='@{/}'|"
-                    type="button">목록으로</button>
+                    type="button">목록으로
+            </button>
         </div>
 
         <div class="col"  th:if="${right}">
             <button class="w-100 btn btn-danger btn-lg"
                     onclick="location.href='main.html'"
                     th:onclick="|location.href='@{/writings/{writingId}/delete/(writingId=${writing.id})}'|"
-                    type="button">삭제하기</button>
+                    type="button">삭제하기
+            </button>
         </div>
     </div>
 </div> <!-- /container -->
