카카오 검색 api

--- a/src/main/resources/templates/basic/writingForm.html
+++ b/src/main/resources/templates/basic/writingForm.html
@@ -44,7 +44,7 @@
         </div>
         <div>
             <label for="content">이미지올리기</label>
-            <input type="file" id="imageFiles" name="imageFiles" class="form-control" multiple="multiple">
+            <input type="file" id="imageFiles" th:field="*{imageFiles}" name="imageFiles" class="form-control" multiple="multiple">
 
         </div>
 
