--- a/src/main/resources/templates/member/memberInfo.html
+++ b/src/main/resources/templates/member/memberInfo.html
@@ -111,8 +111,17 @@
                     th:onclick="|location.href='@{/}'|"
                     type="button">목록으로</button>
         </div>
+        <div class="col">
+            <button class="w-100 btn btn-danger btn-lg"
+                    onclick="location.href='main.html'"
+                    th:onclick="|location.href='@{/member/userinfo/edit}'|"
+                    type="button">회원정보 수정</button>
+        </div>
     </div>
 
 </div> <!-- /container -->
+<br>
+<br>
+<br>
 </body>
 </html>
