--- a/src/main/resources/templates/writing/writingEditForm.html
+++ b/src/main/resources/templates/writing/writingEditForm.html
@@ -24,7 +24,7 @@
         <h2>글쓰기</h2>
     </div>
 <!--      |location.href='@{/writings/{writingId}/delete/(writingId=${writing.id})}'|-->
-    <form action="joinForm.html" th:action="@{/edit/{writingId}/(writingId=${writing.id})}" th:object="${writing}" method="post" enctype="multipart/form-data">
+    <form action="../basic/joinForm.html" th:action="@{/edit/{writingId}/(writingId=${writing.id})}" th:object="${writing}" method="post" enctype="multipart/form-data">
         <div>
             <label for="title">글제목</label>
             <input type="text" id="title" name="title"
