--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -66,6 +66,9 @@
                         th:onclick="|location.href='@{/join}'|"
                         type="button">회원가입</button>
             </div>
+            <a href="/oauth2/authorization/google">구글 로그인</a>
+            <a href="/oauth2/authorization/facebook">페이스북 로그인</a>
+            <a href="/oauth2/authorization/naver">네이버 로그인</a>
         </div>
     </form>
 </div> <!-- /container -->
