--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -72,7 +72,7 @@
                 <td><a href="writing/writing.html" th:href="@{/writing/{writingId}(writingId=${writing.id})}" th:text="${writing.id}"></a></td>
                 <td><a href="writing/writing.html" th:href="@{|/writing/${writing.id}|}" th:text="${writing.title}">글제목</a></td>
                 <td><a href="writing/writing.html" th:href="@{|/writing/${writing.id}|}" th:text="${writing.date}">작성일</a></td>
-                <td><a href="writing/writing.html" th:href="@{|/writing/${writing.id}|}" th:text="${writing.member.loginId}">작성자</a></td>
+                <td><a href="writing/writing.html" th:href="@{|/writing/${writing.id}|}" th:text="${writing.member.name}">작성자</a></td>
             </tr>
             </tbody>
         </table>
