--- a/src/main/resources/templates/writing/writingEditForm.html
+++ b/src/main/resources/templates/writing/writingEditForm.html
@@ -23,8 +23,8 @@
     <div class="py-5 text-center">
         <h2>글쓰기</h2>
     </div>
-<!--      |location.href='@{/writings/{writingId}/delete/(writingId=${writing.id})}'|-->
-    <form action="../basic/joinForm.html" th:action="@{/edit/{writingId}/(writingId=${writing.id})}" th:object="${writing}" method="post" enctype="multipart/form-data">
+<!--      |location.href='@{/boards/{boardId}/delete/(boardId=${Board.id})}'|-->
+    <form action="../basic/joinForm.html" th:action="@{/edit/{boardId}/(boardId=${board.id})}" th:object="${board}" method="post" enctype="multipart/form-data">
         <div>
             <label for="title">글제목</label>
             <input type="text" id="title" name="title"
